--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 
   <script>
     let foodData = [
+      { name: "谭大儿", calories: 9999, protein: 0.3, fat: 0.2, carbs: 13.8, fiber: 2.4, sugar: 10, vitamins: "维生素C 7mg, 维生素A 54μg", minerals: "钾 107mg, 钙 6mg" },
       { name: "苹果", calories: 52, protein: 0.3, fat: 0.2, carbs: 13.8, fiber: 2.4, sugar: 10, vitamins: "维生素C 7mg, 维生素A 54μg", minerals: "钾 107mg, 钙 6mg" },
       { name: "鸡胸肉", calories: 165, protein: 31, fat: 3.6, carbs: 0, fiber: 0, sugar: 0, vitamins: "维生素B6 0.5mg, 烟酸 12mg", minerals: "磷 230mg, 铁 1.1mg" },
       { name: "鸡蛋", calories: 155, protein: 13, fat: 11, carbs: 1.1, fiber: 0, sugar: 1.1, vitamins: "维生素A 140μg, 维生素D 2.9μg", minerals: "硒 21.4μg, 钙 56mg" },
@@ -247,3 +248,4 @@
   </script>
 </body>
 </html>
+
